--- a/Desktop/FirstGame/index.html
+++ b/Desktop/FirstGame/index.html
@@ -10,7 +10,7 @@
     <link rel="shortcut" href="/resource/1.ico" type="image/x-icon">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
 
-    <script type="text/javascript" src="http://code.jquery.com/jquery-1.11.1.js"></script>
+    <script type="text/javascript" src="js/jquery.js"></script>
     <script type="text/javascript" src="js/index.js"></script>
 </head>
 
