--- a/Desktop/FirstGame/index.html
+++ b/Desktop/FirstGame/index.html
@@ -27,7 +27,7 @@
 
 
     <ul>
-        <li id="start">Start</li> <button onclick="ShowHighScoreModal();">High score</button>
+        <li id="start">Start</li> <li onclick="ShowHighScoreModal();">High score</li>
     </ul>
 	
 	<div id="myModal" class="modal" style="display: none;">
