--- a/Desktop/FirstGame/index.html
+++ b/Desktop/FirstGame/index.html
@@ -35,6 +35,7 @@
 	  <!-- Modal content -->
 	  <div class="modal-content">
 		<div class="close" style="text-align: left; font-size: 40px;" onclick="ShowHighScoreModal();">&times;</div>
+		<div style="padding-left: 30px"><h3> Leaderboard! </h3></div>
 		<div id="scoreContent" style="margin-left: 30px;">Some text in the Modal..</div>
 	  </div>
 	</div>
