--- a/Desktop/FirstGame/index.html
+++ b/Desktop/FirstGame/index.html
@@ -28,13 +28,13 @@
 
 
     <ul>
-        <li id="start">Start</li> <li onclick="ShowHighScoreModal();">High score</li>
+        <li id="start" onclick="ShowHighScoreModal();">Start</li> <li onclick="ShowHighScoreModal();">High score</li>
     </ul>
 	
 	<div id="myModal" class="modal" style="display: none;">
 	  <!-- Modal content -->
 	  <div class="modal-content">
-		<div class="close" style="text-align: left; font-size: 40px;" onclick="ShowHighScoreModal();">&times;</div>
+		<div class="close" style="float: right; font-size: 40px;" onclick="ShowHighScoreModal();">&times;</div>
 		<div style="padding-left: 30px"><h3> Leaderboard! </h3></div>
 		<div id="scoreContent" style="margin-left: 30px;">Some text in the Modal..</div>
 	  </div>
